Print in landscape
Added to print media query

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
     }
     @media print {
+        @page {size: landscape}
         html,body{margin:0px;width:1020px}
         #images,#options {
             display:none;
